--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <script src="./01-type-exercise.js"></script>
         <script src="./02-compiler.js"></script>
     -->
-        <script src="./src/04-class.js"></script>
+        <script src="./src/04-class-exercise.js"></script>
     </body>
 </html>
