--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     </head>
     <body>
         <h1>Hello</h1>
-    <!--
-        <script src="./01-type.js"></script>
-        <script src="./01-type-exercise.js"></script>
-        <script src="./02-compiler.js"></script>
-    -->
-        <script src="./src/04-class-exercise.js"></script>
+        <script src="node_modules/systemjs/dist/system.js"></script>
+        <script>
+            SystemJS.config({
+                baseURL: '/src/06-module',
+                defaultJSExtensions: true
+            })
+
+            SystemJS.import('main.js')
+        </script>
     </body>
 </html>
