Learn interface - Note: object literal will be checked strictly - [prop: string]: any -> can specify any properties for object literal - age?: number (optional)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="node_modules/systemjs/dist/system.js"></script>
         <script>
             SystemJS.config({
-                baseURL: '/src/06-module',
+                baseURL: '/src/07-interface',
                 defaultJSExtensions: true
             })
 
