--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="node_modules/systemjs/dist/system.js"></script>
         <script>
             SystemJS.config({
-                baseURL: '/src/08-generic',
+                baseURL: '/src/09-decorator',
                 defaultJSExtensions: true
             })
 
