Add gulp to control the workflow

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 map: {
                     'jQuery': '/node_modules/jquery/dist/jquery.min.js'
                 },
-                baseURL: '/src/10-jquery',
+                baseURL: '/src/11-workflow',
                 defaultJSExtensions: true
             })
 
