Start React Example

--- a/src/12-react/index.html
+++ b/src/12-react/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1 id="app">Hello to my App!!!</h1>
-        <script src="src/99-functional-programming/example.js"></script>
+        <script src="example.js"></script>
     </body>
 </html>
