React with TypeScript Finish the course

--- a/src/12-react/index.html
+++ b/src/12-react/index.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>TypeScript</title>
-    </head>
-    <body>
-        <h1 id="app">Hello to my App!!!</h1>
-        <script src="example.js"></script>
-    </body>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>ReactJS + TypeScript</title>
+</head>
+
+<body>
+    <div id="app"></div>
+    <script src="/dist/bundle.js"></script>
+</body>
+
 </html>
